log
Wed, May 11, 2022 12:59:43 AM: 
 heap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 0/70
68ea007
Wed, May 11, 2022  1:00:19 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4fbe37a
Wed, May 11, 2022  1:03:46 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
da37944
Wed, May 11, 2022  1:05:16 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
eaadcb4
Wed, May 11, 2022  1:06:00 AM: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
f361c37
Wed, May 11, 2022  1:21:54 AM: 
 heap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:44: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
       pq->heapArray = (heapElem *) realloc(pq->capac*2, sizeof(heapElem));
                                            ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
In file included from test.c:4:0:
heap.c:33:8: error: unused variable 'k' [-Werror=unused-variable]
    int k = pq->size;
        ^
cc1.exe: all warnings being treated as errors
Compilation failed
1debab0
Wed, May 11, 2022  1:22:01 AM: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:44: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
       pq->heapArray = (heapElem *) realloc(pq->capac*2, sizeof(heapElem));
                                            ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1c72b9a
Wed, May 11, 2022  1:24:52 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e5339d3
Wed, May 11, 2022  1:25:17 AM: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
3a17235
